--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
 
 :root {
-  --color-background: #ada3a4;
+  --color-background: #9f9f9e;
   --color-text-primary: #000000;
   --color-text-selected: #ffffff;
   --color-border: #4a4a4a;
