--- a/src/Components/Games/Games.css
+++ b/src/Components/Games/Games.css
@@ -21,7 +21,7 @@ body,
 
 .window {
   width: auto;
-  min-width: 30%;
+  min-width: 40%;
   max-width: 50%;
   border: 2px solid #000;
   box-shadow: 4px 4px 0px #000;
@@ -160,6 +160,18 @@ body,
   display: flex;
   justify-content: space-between;
   font-size: 16px;
+}
+
+@media (max-width: 820px) {
+  .Games {
+    background-color: rgb(124, 124, 124);
+    background-image: url("../../Images/Games/tile.png");
+    background-size: 0.5px;
+  }
+
+  .window {
+    min-width: 80%;
+  }
 }
 
 @media (max-width: 480px) {
