--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 body {
   margin: 0;
-  padding: 0;
-  /* background-color: black; */
+  padding: 60px 0 0 0;
 }
