--- a/src/Components/Home/ProjectVideos/ProjectVideos.css
+++ b/src/Components/Home/ProjectVideos/ProjectVideos.css
@@ -24,12 +24,15 @@ body {
 .pv-container {
   font-family: "Kanit", sans-serif;
   width: 100%;
-
   height: fit-content;
   overflow-y: auto;
   background-color: var(--pv-bg-color);
   color: var(--pv-text-color);
   transition: background-color 0.3s, color 0.3s;
+}
+
+.pv-tech-container {
+  width: 100%;
 }
 
 .pv-toggle {
@@ -189,13 +192,13 @@ body {
   list-style-type: none;
   justify-content: flex-start;
   margin-top: auto;
+  gap: 0.5rem;
 }
 
 .pv-tech-item {
   background-color: var(--pv-bg-color);
   color: var(--pv-text-color);
   padding: 0.25rem 0.5rem;
-  margin: 0.25rem;
   border-radius: 20px;
   font-size: 0.8rem;
   transition: all 0.3s ease;
@@ -204,6 +207,33 @@ body {
 }
 
 .pv-tech-item:hover {
+  background-color: var(--pv-accent-color);
+  color: var(--pv-bg-color);
+}
+
+.pv-tech-show-more {
+  cursor: pointer;
+  background-color: var(--pv-accent-color);
+  color: var(--pv-bg-color);
+}
+
+.pv-tech-show-more:hover {
+  background-color: var(--pv-hover-color);
+}
+
+.pv-tech-show-less {
+  margin-top: 0.5rem;
+  background-color: var(--pv-bg-color);
+  color: var(--pv-text-color);
+  border: 1px solid var(--pv-accent-color);
+  padding: 0.25rem 0.5rem;
+  border-radius: 20px;
+  font-size: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.pv-tech-show-less:hover {
   background-color: var(--pv-accent-color);
   color: var(--pv-bg-color);
 }
