--- a/src/Components/Games/Games.css
+++ b/src/Components/Games/Games.css
@@ -12,22 +12,44 @@ body,
   font-family: "Cutive Mono", monospace;
   display: flex;
   justify-content: center;
-  padding-top: 5vh;
   min-height: 100vh;
-  background-color: rgb(124, 124, 124);
-  background-image: url("../../Images/Games/tile.png");
-  background-size: 1.5px;
+  background-color: rgb(139, 139, 139);
+}
+
+.games-wrapper {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100vw;
+  background: repeating-linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2) 0px,
+      rgba(0, 0, 0, 0.2) 1px,
+      transparent 1px,
+      transparent 2px
+    ),
+    repeating-linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.1) 0px,
+      rgba(255, 255, 255, 0.1) 1px,
+      transparent 1px,
+      transparent 2px
+    );
+  opacity: 0.8;
+  background-size: 2px 2px;
+  animation: noiseAnimation 100s steps(2, end) infinite;
 }
 
 .window {
-  width: auto;
-  min-width: 40%;
-  max-width: 50%;
+  width: 80vw;
+  max-width: 900px;
   border: 2px solid #000;
   box-shadow: 4px 4px 0px #000;
   background-color: #c0c0c0;
   font-size: 18px;
   height: fit-content;
+  animation: subtleShake 10s infinite;
+  margin-top: 5vh;
 }
 
 .title-bar {
@@ -128,7 +150,7 @@ body,
 }
 
 .selected-li {
-  background-color: #000080;
+  background-color: #1010b6;
   color: #fff;
 }
 
@@ -162,21 +184,57 @@ body,
   font-size: 16px;
 }
 
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
+.selected-li::after {
+  content: "_";
+  animation: blink 1s step-end infinite;
+}
+
+/* Animation Keyframes */
+@keyframes noiseAnimation {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 100%;
+  }
+}
+
+@keyframes subtleShake {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate(0.5px, 0.5px) rotate(0.1deg);
+  }
+  50% {
+    transform: translate(-0.5px, -0.3px) rotate(-0.1deg);
+  }
+  75% {
+    transform: translate(0.3px, -0.5px) rotate(0.05deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+}
+
 @media (max-width: 820px) {
   .Games {
-    background-color: rgb(124, 124, 124);
-    background-image: url("../../Images/Games/tile.png");
-    background-size: 0.5px;
-  }
-
-  .window {
-    min-width: 80%;
+    margin-top: auto;
   }
 }
 
 @media (max-width: 480px) {
   .window {
-    width: 95%;
     font-size: 16px;
   }
 
@@ -205,19 +263,4 @@ body,
   .status-bar {
     font-size: 14px;
   }
-}
-
-@keyframes blink {
-  0%,
-  100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-
-.selected-li::after {
-  content: "_";
-  animation: blink 1s step-end infinite;
 }
