--- a/src/Components/Games/Games.css
+++ b/src/Components/Games/Games.css
@@ -41,7 +41,8 @@ body,
 }
 
 .window {
-  width: 80vw;
+  min-width: 40vw;
+  max-width: 80vw;
   max-width: 900px;
   border: 2px solid #000;
   box-shadow: 4px 4px 0px #000;
