--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,8 +1,14 @@
 :root {
   --primary: #000000;
-  --secondary: #9f9f9e;
+  --secondary: #aba1a2;
   --accent: rgba(100, 149, 237, 0.2);
   --text-glow: #e8e5e6a3;
+  /* Adding CRT effect variables */
+  --color-crt-effect1: rgba(44, 44, 44, 0);
+  --color-crt-effect2: rgba(0, 0, 0, 0.15);
+  --color-crt-effect-r: rgba(128, 128, 128, 0.03);
+  --color-crt-effect-g: rgba(128, 128, 128, 0.02);
+  --color-crt-effect-b: rgba(128, 128, 128, 0.03);
 }
 
 html,
@@ -65,6 +71,7 @@ body {
 .icons-cont {
   padding-top: 10%;
   height: fit-content;
+  position: relative;
 }
 
 /* ICON STYLING */
@@ -153,14 +160,15 @@ body {
     min-height: fit-content;
   }
 
+  /* Improved CRT effect for icons-cont */
   .icons-cont::before {
-    content: " ";
+    content: "";
     display: block;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background: linear-gradient(
         var(--color-crt-effect1) 50%,
         var(--color-crt-effect2) 50%
@@ -171,10 +179,10 @@ body {
         var(--color-crt-effect-g),
         var(--color-crt-effect-b)
       );
-    z-index: 0;
     background-size: 100% 2px, 3px 100%;
     pointer-events: none;
     opacity: 0.7;
+    z-index: 0;
   }
 
   .Icon {
