portfolio ready for init deploy settings take num 2- current node.js running backend great.

--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -528,7 +528,7 @@ body {
 }
 
 .cookie-notice p {
-  color: var(--text-color);
+  color: var(--neon-color);
   margin: 0;
   font-size: 14px;
   line-height: 1.4;
