--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -268,6 +268,13 @@ body {
   z-index: 2;
 }
 
+.posts-p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .posts h2 {
   font-size: clamp(20px, 4vw, 30px);
   text-align: center;
@@ -285,6 +292,16 @@ body {
   height: auto;
   position: relative;
   z-index: 1;
+}
+
+.code-block {
+  background-color: #24c86e14;
+  border: dashed 1px var(--neon-color-alt);
+  padding: 3%;
+  width: fit-content;
+  border-radius: 1%;
+  font-size: clamp(12px, 2.5vw, 14px);
+  text-align: start;
 }
 
 .posts-a {
@@ -506,11 +523,29 @@ body {
   }
 }
 
-/* Update these styles in your Blog.css file */
+.help-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--background-color);
+  color: var(--neon-color);
+  border: 2px solid var(--neon-color);
+  border-radius: 15%;
+  padding: 10px 10px 8px 10px;
+  cursor: pointer;
+  box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
+  transition: background-color 0.3s ease, color 0.3s ease;
+  z-index: 1000;
+}
+
+.help-button:hover {
+  background-color: var(--neon-color);
+  color: var(--background-color);
+}
 
 .cookie-notice {
   position: fixed;
-  top: 33vh; /* Changed from 20px to 33vh for 1/3 screen height */
+  top: 15vh;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
@@ -580,6 +615,12 @@ body {
     gap: 10px;
   }
 
+  .help-button {
+    padding: 8px;
+    bottom: 15px;
+    right: 15px;
+  }
+
   .posts {
     padding: 6%;
   }
@@ -613,6 +654,12 @@ body {
     height: clamp(70px, 16vw, 120px);
   }
 
+  .help-button {
+    padding: 6px;
+    bottom: 10px;
+    right: 10px;
+  }
+
   .posts h2 {
     font-size: clamp(16px, 3vw, 20px);
   }
@@ -624,5 +671,17 @@ body {
   .posts-a {
     font-size: clamp(12px, 2.5vw, 14px);
     padding: 6px 12px;
+  }
+
+  .responsive-img,
+  .giphy-img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .code-block {
+    max-width: 80vw;
+    font-size: clamp(8px, 1vw, 3px);
+    padding: 1%;
   }
 }
