--- a/src/Components/Shop/CSS/Body.css
+++ b/src/Components/Shop/CSS/Body.css
@@ -36,6 +36,7 @@
   flex-direction: column;
   /* Update transition to be smoother */
   transition: all 0.4s cubic-bezier(0.3, 0, 0.2, 1);
+  text-align: center;
 }
 
 .item-card:hover {
