--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -110,7 +110,7 @@ body {
   width: 85vw;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 
 .blog-content {
