--- a/src/Components/Shop/CSS/Shop.css
+++ b/src/Components/Shop/CSS/Shop.css
@@ -39,6 +39,21 @@
   background-color: var(--text-color);
 }
 
+.sub-header {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+  flex-grow: 1;
+}
+
+.body-con {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 .login-container {
   max-width: 400px;
   margin: 2rem auto;
