--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -28,8 +28,8 @@
 
 .nav-ul {
   list-style-type: none;
-  margin: 0 auto;
-  padding: 0 clamp(0.5rem, 2vw, 1rem);
+  margin: 0.1rem auto;
+  padding: 1.2rem clamp(2rem, 1vw, 0.1rem);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -40,6 +40,7 @@
   max-width: 1200px;
   gap: clamp(0.25rem, 1vw, 0.5rem);
   justify-content: space-between;
+  height: 1.5rem;
 }
 
 .nav-li {
@@ -75,6 +76,10 @@
   color: var(--color-text-selected);
 }
 
+.navbar-span {
+  font-size: 0.7rem;
+}
+
 .vintage-nav::before {
   content: "";
   display: block;
@@ -107,6 +112,10 @@
     padding: clamp(0.2rem, 1vw, 0.4rem) clamp(0.3rem, 1.5vw, 0.5rem);
     font-size: clamp(0.7rem, 1.5vw, 0.85rem);
   }
+
+  .navbar-span {
+    font-size: clamp(0.6rem, 1.2vw, 0.75rem);
+  }
 }
 
 /* For smaller smartphones like iPhone SE, Pixel 4a (max-width: 480px) */
@@ -121,6 +130,10 @@
     font-size: clamp(0.6rem, 1.5vw, 0.55rem);
     letter-spacing: clamp(0.1px, 0.3vw, 0.5px);
   }
+
+  .navbar-span {
+    font-size: clamp(0.45rem, 1vw, 0.45rem);
+  }
 }
 
 /* For very small smartphones like iPhone 12 Mini (max-width: 400px) */
@@ -129,5 +142,9 @@
     padding: clamp(0.1rem, 0.5vw, 0.25rem) clamp(0.2rem, 1vw, 0.3rem);
     font-size: clamp(0.6rem, 1.2vw, 0.5rem);
     letter-spacing: 0;
+  }
+
+  .navbar-span {
+    font-size: clamp(0.45rem, 1vw, 0.4rem);
   }
 }
